# OpenAI-as-Techlead

./: LICENSE  Makefile  README.md  print_repo_contents.py  pyproject.toml
src/: print_repo_contents.py
tests/: test_print_repo_contents.py
