[tool.poetry]
name = "openai-as-techlead"
version = "0.1.0"
description = "OpenAI as intelligence in development team"
authors = ["Shuo Yang"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


